--- a/src/app/file-loader.html
+++ b/src/app/file-loader.html
@@ -25,14 +25,8 @@
     <div class="container">
         <h1 align="center">Введите данные</h1>
         <form action="/upload" method="post" enctype="multipart/form-data" name="dataForm">
-            <label class="info" id="edit1">Введите строку, которую нужно заменить:</label><br><br>
-            <input class="user-info" autocomplete="off" type="text" name="stringToBeChanged" required pattern="^[a-zA-Zа-яА-ЯёЁ0-9_]{1,100}$" title="Можно ввести от 1 до 100 символов. Допускаются: русские/латинские буквы обоих регистров, цифры, знак нижнего подчёркивания."><br><br><br>
-
-            <label class="info">Введите количество замен (оставьте 0 для замены всех совпадений):</label><br><br>
-            <input class="user-info" autocomplete="off" type="text" value="0" name="numberOfChanges" required pattern="^[0-9]{1,3}$" title="Можно вводить только числа в диапазоне от 0 до 999."><br><br><br>
-
-            <label class="info" id="edit3">Введите строку, на которую нужно заменить:</label><br><br>
-            <input class="user-info" autocomplete="off" type="text" name="stringChanger" required pattern="^[a-zA-Zа-яА-ЯёЁ0-9_]{1,100}$" title="Можно ввести от 1 до 100 символов. Допускаются: русские/латинские буквы обоих регистров, цифры, знак нижнего подчёркивания."><br><br><br>    
+            <label class="info" id="edit1">Введите строку, которую нужно добавить:</label><br><br>
+            <input class="user-info" autocomplete="off" type="text" name="stringToAdd" required pattern="^[a-zA-Zа-яА-ЯёЁ0-9_]{1,100}$" title="Можно ввести от 1 до 100 символов. Допускаются: русские/латинские буквы обоих регистров, цифры, знак нижнего подчёркивания."><br><br><br>    
 
             <div class="file-loader">  
                 <input class="input-file" required id="my-file0" type="file" name="file0">
