--- a/src/app/public/style.css
+++ b/src/app/public/style.css
@@ -11,7 +11,7 @@ td {
 }
 
 h1 {
-	margin-top: 0em;
+	margin: auto;
 }
 
 input::-webkit-outer-spin-button,
@@ -24,14 +24,10 @@ input::-webkit-inner-spin-button {
 .container-x,
 .container-chat,
 .container-chat-back {
-	margin: 0 auto;
+	margin: auto;
 	background: 
 	color: white;
 	padding-top: 3em;
-}
-
-.container-x {
-	margin-right: 50em;
 }
 
 .info {
@@ -48,6 +44,7 @@ input::-webkit-inner-spin-button {
 	padding-right: 1em;
 	height: 60px;
 	border-radius: 10px;
+	color: white;
 }
 
 .user-info:focus {
@@ -124,18 +121,22 @@ input::-webkit-inner-spin-button {
 }
 
 .result-table {
+	margin: auto;
 	padding-bottom: 3em;
 	padding-right: 3em;
 }
 
+table tbody {
+	display: block;
+	margin: auto;
+}
+
 .fail {
 	color: red;
-	text-shadow: 0 0 2em red, 0 0 2em red, 0 0 1em red;
 }
 
 .success {
 	color: green;
-	text-shadow: 0 0 2em green, 0 0 2em green, 0 0 2em green, 0 0 1em green, 0 0 1em green;
 }
 
 .void {
@@ -302,6 +303,7 @@ input::-webkit-inner-spin-button {
 	margin-left: 4em;
 	width: 90%;
 	transition: 2s;
+	color: black;
 }
 
 .send-text:focus {
@@ -309,6 +311,7 @@ input::-webkit-inner-spin-button {
 	box-shadow: inset 0 0 2em black, 0 0 2em blue;
 	outline: none;
 	transition: 2s;
+	color: white;
 }
 
 ::-webkit-scrollbar {
@@ -346,16 +349,17 @@ input::-webkit-inner-spin-button {
 }
 
 #messages li {
-	background-color: rgba(115, 0, 153, 0.8);
-	border-radius: 1em;
+	border-radius: 2em;
 	padding-left: 1em;
 	padding-right: 1em;
+	padding-top: 1em;
+	color: white;
+	border-color: white;
 }
 
 #messages li:nth-child(odd) {
-	background: rgba(115, 0, 230, 0.2);
-	color: rgba(255, 0, 102, 0.8);
-	text-shadow: 0 0 1em red;
+	color: white;
+	text-shadow: 0 0 1em white;
 }
 
 .secret-state {
@@ -363,14 +367,17 @@ input::-webkit-inner-spin-button {
 	margin-left: 10em;
 	margin-bottom: 0;
 	opacity: 0;
-	color: rgba(255, 0, 102, 0.8);
 	text-shadow: 0 0 1em red;
 	transition: 2s;
 }
 
+.secret-state:focus {
+	color: white;
+}
+
 .typing {
 	opacity: 1;
-	color: rgba(255, 0, 102, 0.8);
+	color: white;
 	text-shadow: 0 0 1em red;
 	transition: 2s;
 }
@@ -401,9 +408,7 @@ input::-webkit-inner-spin-button {
 }
 
 .system-info {
-	background-color: rgba(0, 0, 179, 0.35) !important;
-	text-shadow: 0 0 2em rgba(77, 255, 77, 0.7) !important;
-	color: rgba(77, 255, 77, 0.7) !important;
+	color: white;
 }
 
 .open-state {
